Icons not showing up - fixed?

--- a/styles.css
+++ b/styles.css
@@ -125,4 +125,6 @@ a {
   margin-right: 2px;
   cursor: pointer;
   border-radius: 5px;
+  width: 64px;
+  height: 64px; 
 }
